--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
 		</nav>
 	</header>
 	<body>
-		<div>
+		<div class="col-12 center">
 			<p>The Columbia Women's Business Society (CWBS) is an undergraduate women's organization that aims to create a business leadership network between Columbia students and female professionals in New York City and beyond.</p>
 
 			<p>As one of the largest pre-professional groups at the University, we are committed to helping Columbia women attain their professional goals by providing educational events, networking resources, exposure to career opportunities, and mentoring relationships with successful businesswomen. All our events are open to past and present Columbia students.</P>
