--- a/Directory.html
+++ b/Directory.html
@@ -16,6 +16,14 @@
 	</header>
 	</header>
 	<body>
+		<div id="search">
+			<p>Search the Directory:
+			  	<form class="searchbar" action="" autocomplete="on">
+			  		<input id="search" name="search" type="text">
+			  		<input id="search_submit" value="Search" type="submit">
+			  	</form>
+		  	</p>
+		</div>
 		<div>
 			<table>
 				<tr class="tableheader">
@@ -149,7 +157,7 @@
 					<td>SEAS</td>
 					<td>2016</td>
 					<td>IBM Global Business Services (consulting)</td>
-					<td><a href="mailto:xf2145@barnard.edu"></a></td>
+					<td><a href="mailto:Klm2190@columbia.edu">klm2190@columbia.edu</a></td>
 				</tr>
 				<tr class="one">
 					<td>Celina Sprague</td>
