--- a/Jeanne.html
+++ b/Jeanne.html
@@ -17,7 +17,7 @@
 		</nav>
 	</header>
 	</header>
-	<body>
+	<body class="center">
 		<div class="div12">
 			<img class="headshots" src="images/jeanne.jpg">
 		</div>
