--- a/Lily.html
+++ b/Lily.html
@@ -15,7 +15,7 @@
 			</ul>
 		</nav>
 	</header>
-	<body>
+	<body class="center">
 		<div class="div12">
 			<img class="headshots" src="images/lily.jpg">
 		</div>
